value-objects.md: simplified handling of CDS archives